Compiler/tests/bad/Vectors/01_vector.rs
fn main(){
    let x : i32 = vec![5,5,6];
}
